# sslexample

./: .gitignore  README.md
client/: CMakeLists.txt  client.pro  main.cpp
common/: common.cpp  common.h  thread.cpp  thread.h
server/: CMakeLists.txt  cert.cpp  cert.h  main.cpp  server.pro
tools/: ca.conf  createca.cmd  createca.sh  test_ssl.cmd
